Moved Functions Around
Moved some of the functions in the RMD files to the  run_report.R script file to help them to be more general purpose and more easily updatable.  Fixed some documentation and import issues.

--- a/inst/rmd/P1.Rmd
+++ b/inst/rmd/P1.Rmd
@@ -45,116 +45,43 @@ knitr::opts_chunk$set(echo = TRUE,
                 message = FALSE,
                 warning = FALSE)
 startTime <- Sys.time()
+
+# supporting look up tables
+stateCnty <- chordsTables::stateCnty
+
+# ISO language lookup
+isoLang <- chordsTables::isoLang
+
+# VDW value sets
+valSets <- chordsTables::valSets
+
+ccsMDxI9 <- chordsTables::ccsMDxI9
+ccsMDxI10 <- chordsTables::ccsMDxI10
+ccsSDxI9 <- chordsTables::ccsSDxI9
+icdLU <- rbind(ccsMDxI10[c('dxCdTp','dxDesc')],ccsSDxI9[c('dxCdTp','dxDesc')]) 
+
+maxQryRows = 0
+
 ```
 
 ```{r connection strings, include=FALSE, error=FALSE}
-if (nchar(params$DBUser) == 0) {
-  	connectionString <- paste('driver={SQL Server};server=',params$DBServerName,ifelse(nchar(params$DBPort) > 0, paste(",",params$DBPort, sep=""), ""),';database=',params$DBName, sep="")
-  
-}else{
-    connectionString <- paste('driver={SQL Server};uid=',params$DBUser,';pwd=',params$DBPassword,';server=',params$DBServerName, ifelse(nchar(params$DBPort) > 0, paste(",",params$DBPort, sep=""), ""),';database=',params$DBName, sep="")
-}
-
-if (params$DBEncrypt == "TRUE" ||params$DBEncrypt == TRUE){
-  connectionString <- paste(connectionString, ";Encrypt=True;TrustServerCertificate=False;")
-}
-
+connectionString <- getConnectionString(params)
 ```
 
 ```{r run queries, include=FALSE, error=TRUE}
-run_query <- function(query_text, ...) {
-  tryCatch(
-    {
-      db_conn <- get_connection()
-      result <- sqlQuery(db_conn, query = query_text, as.is = TRUE)
-      return(result)
-      },
-    error = function(cond){
-      stop(cond)
-      return(NA)
-    },
-    finally = {
-      close_conection(db_conn)
-    }
-  )
+run_query <- function(query_text, ...){
+  result <- run_db_query(connectionString, query_text )
+  return(result)
 }
 
 get_connection <- function(){
-  tryCatch(
-    {
-      db_conn <- RODBC::odbcDriverConnect(connection = connectionString)
-      return(db_conn)
-    },
-    error = function(cond){
-      stop(cond)
-      return(NA)
-    }
-  )
+  connection <- get_new_connection(connectionString)
+  return(connection)
 }
-
-close_conection <- function(db_conn){
-  try({
-    RODBC::odbcClose(db_conn)
-  })
-}
-
 ```
 
 ```{r table replacements, include=FALSE, error=FALSE}
-#Checks to see if partner is using table replacements.
-#Checks if the CHORDS_TableNames table exists in their VDW.  If not, check if they are using a csv.  If not, applies default table names.
-dfChordsTbls <- run_query("                    
-    IF EXISTS
-    (
-        SELECT
-            *
-        FROM  SYSOBJECTS
-        WHERE XTYPE = 'U' AND
-              NAME = 'CHORDS_TableNames'
-    )
-    BEGIN
-        SELECT
-            [ORG_NAME],
-            [NEW_NAME]
-        FROM[CHORDS_TABLENAMES];
-    END; ")
-if (!is.null(dfChordsTbls) & !rlang::is_empty(dfChordsTbls) & exists("outputdir")){
-  tableReplaceFile <-  paste0(outputdir, "\\tablereplace.csv")
-  if (file.exists(tableReplaceFile)){
-    print("updating for QA using tablereplace.csv")
-    dfChordsTbls <- read.csv2(tableReplaces, header = TRUE, sep = ",", stringsAsFactors=FALSE)
-  }
-}
-if (!is.null(dfChordsTbls) & !rlang::is_empty(dfChordsTbls)){
-  demographics <- ifelse("demographics" %in% tolower(dfChordsTbls$ORG_NAME),  dfChordsTbls$NEW_NAME[match(tolower("demographics"), tolower(dfChordsTbls$ORG_NAME))], "demographics")
-  encounters <- ifelse("encounters" %in% tolower(dfChordsTbls$ORG_NAME),  dfChordsTbls$NEW_NAME[match(tolower("encounters"), tolower(dfChordsTbls$ORG_NAME))], "encounters")
-  census_location <- ifelse("census_location" %in% tolower(dfChordsTbls$ORG_NAME),  dfChordsTbls$NEW_NAME[match(tolower("census_location"), tolower(dfChordsTbls$ORG_NAME))], "census_location")
-  diagnoses <- ifelse("diagnoses" %in% tolower(dfChordsTbls$ORG_NAME),  dfChordsTbls$NEW_NAME[match(tolower("diagnoses"), tolower(dfChordsTbls$ORG_NAME))], "diagnoses")
-  vital_signs <- ifelse("vital_signs" %in% tolower(dfChordsTbls$ORG_NAME),  dfChordsTbls$NEW_NAME[match(tolower("vital_signs"), tolower(dfChordsTbls$ORG_NAME))], "vital_signs")
-  lab_results <- ifelse("lab_results" %in% tolower(dfChordsTbls$ORG_NAME),  dfChordsTbls$NEW_NAME[match(tolower("lab_results"), tolower(dfChordsTbls$ORG_NAME))], "lab_results")
-  procedures <- ifelse("procedures" %in% tolower(dfChordsTbls$ORG_NAME),  dfChordsTbls$NEW_NAME[match(tolower("procedures"), tolower(dfChordsTbls$ORG_NAME))], "procedures")
-  benefit <- ifelse("benefit" %in% tolower(dfChordsTbls$ORG_NAME),  dfChordsTbls$NEW_NAME[match(tolower("benefit"), tolower(dfChordsTbls$ORG_NAME))], "benefit")
-  linkage <- ifelse("linkage" %in% tolower(dfChordsTbls$ORG_NAME),  dfChordsTbls$NEW_NAME[match(tolower("linkage"), tolower(dfChordsTbls$ORG_NAME))], "linkage")
-  
-} else {
-  # Names of database tables
-  demographics    <- "demographics"
-  encounters      <- "encounters"
-  census_location <- "census_location"
-  diagnoses       <- "diagnoses"
-  vital_signs     <- "vital_signs"
-  lab_results     <- "lab_results"
-  procedures      <- "procedures"
-  benefit        <- "benefit"
-  linkage        <- "linkage"
-}
-# set to zero for full read of the database
-# set to a positive number to limit the number of rows read from each table
-maxQryRows <- 0
-# load lib for SQL server connectivity
-# install.packages("RODBC")
-# install.packages("knitr")
-# install.packages("tidyverse")
+tbresult <-runTableReplacements(connectionString)
 ```
 
 ## CHORDS QA Report: VDW P1 Tables
@@ -165,54 +92,6 @@ The purpose of the data quality program is to characterize the data in CHORDS VD
 Data Partner: 
 Analyst: 
 Query Run Date:  `r Sys.Date()`
-
-
-```{r supporting data and functions, include = FALSE, error=T}
-## helper functions
- # returns a vector with the column numbers of character variables in the data frame
-charVars <- function(df) grep('^ch',sapply(df,class))
- # trims all character variables in a dataframe, sets blank to NA
-trimChrVars <- function(df){
-for(i in charVars(df)){
-  df[,i] <- gsub('\\s+$','',df[,i])
-  df[,i] <- ifelse(nchar(df[,i])==0,NA,df[,i])
-}
-  df
-}
-# age category calculator
-ageCatCalc <- function(age){
-  ageCat <- factor(
-    ifelse(is.na(age)==TRUE, 0,
-           ifelse(age<0              , 1, 
-                  ifelse(age>=0 & age<2, 2,
-                         ifelse(age>=2 & age<5, 3, 
-                                ifelse(age>=5 & age<10, 4, 
-                                       ifelse (age>=10 & age<15, 5, 
-                                               ifelse(age>=15 & age<19, 6,
-                                                      ifelse(age>=19 & age<22, 7,
-                                                             ifelse(age>=22 & age<45, 8, 
-                                                                    ifelse(age>=45 & age<65, 9, 
-                                                                           ifelse(age>=65 & age<75, 10, 
-                                                                                  ifelse(age>=75 & age<90, 11,
-                                                                                         ifelse(age>=90 , 12, 13)))))) ))))))),
-    levels=0:13,
-    labels=c('Missing','Negative','0-1','2-4','5-9','10-14','15-18','19-21','22-44','45-64','65-74','75-89','90+','Other')
-  )
-  
-  return(ageCat)
-}
-# supporting look up tables
-stateCnty <- chordsTables::stateCnty
-ccsMDxI9 <- chordsTables::ccsMDxI9
-ccsMDxI10 <- chordsTables::ccsMDxI10
-ccsSDxI9 <- chordsTables::ccsSDxI9
-icdLU <- rbind(ccsMDxI10[c('dxCdTp','dxDesc')],ccsSDxI9[c('dxCdTp','dxDesc')]) 
-# ISO language lookup
-isoLang <- chordsTables::isoLang 
- 
-# VDW value sets
-valSets <- chordsTables::valSets
-```
 
 ## Data Quality Report Results
 
@@ -263,7 +142,6 @@ tab1_vs <- run_query(paste0("select count(*) as nrows,
 	min(measure_date) as mindt,
 	max(measure_date) as maxdt
 	from ", vital_signs))
-
 
 tab1_ben <- run_query(paste0("select count(*) as nrows,
   count(distinct person_id) as npats,
@@ -535,8 +413,8 @@ gender_identity <-   demogCounts %>%
 
 ```{r tab5.1_disp, echo = F, include=T, error=T}
  
-knitr::kable(gender_identity[c( 'Gender Identity','count','countPct')], 
-            col.names = c('gender_identity',"Frequency", "Percent"), 
+knitr::kable(gender_identity[c('gender_identity','count','countPct')], 
+            col.names = c('Gender Identity',"Frequency", "Percent"), 
             row.names=F, 
             format.args = list(big.mark = ","))
 ```
